doc: added description in env variables

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,5 +1,9 @@
+#Is used to specify the connection details for the database that the application will use
+#DATABASE_URL=username:password@host:port/database_name
 DATABASE_URL=
 
+#Is used to specify the port number on which the API server should listen for incoming requests
 API_PORT=
 
+#Is the key to generate JWT tokens
 SECRET_KEY=
